--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,3 +1,10 @@
-body {
-    background-color: black;
+p{
+    margin-top: 10px 0 !important ;
+
+}
+
+.login-container {
+    width :400px;
+    margin-top: 50px;
+    text-align: center;
 }
